--- a/blog_api/Pipfile
+++ b/blog_api/Pipfile
@@ -15,6 +15,8 @@ flask-script = "*"
 marshmallow = "*"
 flask-bcrypt = "*"
 pyjwt = "*"
+pytest-cov = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.8"
