--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 env:
     - DATABASE_TEST_URL=postgresql+psycopg2://test:password@localhost:5432/blog_test_db
 before_script:
-    - psql -c 'create user test with encrypted password "password";' -U postgres
+    - psql -c "create user test with password 'password';" -U postgres
     - psql -c 'create database blog_test_db;' -U postgres
     - psql -c 'grant all privileges on database blog_test_db to test;' -U postgres
 install:
