--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
     - pip install pipenv
     - pipenv install
 script:
-    - pytest --cov=src --cov-config .coveragerc
+    - python -m  unittest discover -s  src/tests
 after_success:
     - coveralls
 addons:
