--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ python:
 services:
     - postgresql
 env:
-    - DATABASE_TEST_URL=postgresql+psycopg2://test:password@localhost:5432/blog_test_db
-    - JWT_SECRET_KEY=hhgaghhgsdhdhdd
-    - FLASK_ENV=development
+    - JWT_SECRET_KEY=hhgaghhgsdhdhdd FLASK_ENV=development DATABASE_TEST_URL=postgresql+psycopg2://test:password@localhost:5432/blog_test_db
 before_script:
     - psql -c "create user test with password 'password';" -U postgres
     - psql -c 'create database blog_test_db;' -U postgres
@@ -16,7 +14,7 @@ install:
     - pip install pipenv
     - pipenv install
 script:
-    - python -m  unittest discover -s  src/tests
+    - pytest --cov=src --cov-config .coveragerc
 after_success:
     - coveralls
 addons:
